--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "concurrently \"cd ../server && npm run start\" \"npm run start\"",
+    "dev": "concurrently \"cd ./server && npm run start\" \"npm run start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
