--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chattest",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://app-server04-d58fcb99f7e1.herokuapp.com",
   "private": true,
   "dependencies": {
     "@cloudinary/react": "^1.13.1",
