--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
   "scripts": {
     "start": "react-scripts start",
     "dev": "concurrently \"cd ./server && npm run start\" \"npm run start\"",
-    "build": "react-scripts build",
+    "build": "cross-env REACT_APP_API_BASE_URL=https://app-server04-d58fcb99f7e1.herokuapp.com react-scripts build",
+    "build:dev": "cross-env REACT_APP_API_BASE_URL=http://localhost:5000 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -68,5 +69,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
