--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,10 @@
       {
         "source": "**",
         "destination": "/index.html"
+      },
+      {
+        "source": "/api/**",
+        "destination": "https://app-server04-d58fcb99f7e1.herokuapp.com/api/**"
       }
     ]
   }
