--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "cloudinary": "^2.5.1",
     "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
     "emoji-picker-react": "^4.12.0",
@@ -47,7 +48,7 @@
   "scripts": {
     "start": "react-scripts start",
     "dev": "concurrently \"cd ./server && npm run start\" \"npm run start\"",
-    "build": "cross-env REACT_APP_API_BASE_URL=https://app-server04-d58fcb99f7e1.herokuapp.com react-scripts build",
+    "build": "cross-env REACT_APP_API_BASE_URL=https://app-server04-d58fcb99f7e1.herokuapp.com REACT_APP_WS_BASE_URL=wss://app-server04-d58fcb99f7e1.herokuapp.com react-scripts build",
     "build:dev": "cross-env REACT_APP_API_BASE_URL=http://localhost:5000 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
