--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
   "scripts": {
     "start": "react-scripts start",
     "dev": "concurrently \"cd ./server && npm run start\" \"npm run start\"",
-    "build": "cross-env REACT_APP_API_BASE_URL=https://app-server04-d58fcb99f7e1.herokuapp.com REACT_APP_WS_BASE_URL=wss://app-server04-d58fcb99f7e1.herokuapp.com react-scripts build",
-    "build:dev": "cross-env REACT_APP_API_BASE_URL=http://localhost:5000 react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -72,6 +71,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^8.0.0"
   }
 }
