--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,10 +17,12 @@ jobs:
           echo "REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }}" >> .env.production
           echo "REACT_APP_WS_BASE_URL=${{ secrets.REACT_APP_WS_BASE_URL }}" >> .env.production
 
-      - name: Build with environment variables
-        run: npx dotenv -e .env.production -- npm run build    
+      - name: Install dependencies
+        run: npm ci
 
-      - run: "npm ci && CI=false npm run build"
+      - name: Build with environment variables
+        run: npx dotenv -e .env.production -- CI=false npm run build
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
