--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,6 +18,9 @@ jobs:
         run: npm ci
 
       - name: Build with environment variables
+        run: cross-env REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }} REACT_APP_WS_BASE_URL=${{ secrets.REACT_APP_WS_BASE_URL }} CI=false npm run build
+
+      - name: Build with environment variables
         run: npm run build:prod
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
