updated env variables

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,7 +18,7 @@ jobs:
         run: npm ci
 
       - name: Build with environment variables
-        run: cross-env REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }} REACT_APP_WS_BASE_URL=${{ secrets.REACT_APP_WS_BASE_URL }} CI=false npm run build
+        run: CI=false npm run build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
